Isolate tests and run them in parallel