@@ -416,22 +416,17 @@
 
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
         <configuration>
           <argLine>-Dconcordion.output.dir=${concordion.output.dir}</argLine>
           <junitArtifactName>none:none</junitArtifactName>
           <testNGArtifactName>org.testng:testng</testNGArtifactName>
-          <forkMode>once</forkMode>
-          <argLine xml:space="preserve">-Xmx1024m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC
-            -XX:+CMSClassUnloadingEnabled -XX:+HeapDumpOnOutOfMemoryError
-            -XX:HeapDumpPath=${project.build.directory} -Dsun.lang.ClassLoader.allowArraySyntax=true</argLine>
+          <forkCount>1.5C</forkCount>
+          <reuseForks>false</reuseForks>
           <suiteXmlFiles>
             <suiteXmlFile>src/test/resources/AllNonContainerTests.tng.xml</suiteXmlFile>
           </suiteXmlFiles>
           <runOrder>alphabetical</runOrder>
-          <!-- TODO try parallel execution
-                         <parallel>methods</parallel>
-                         <threadCount>4</threadCount>
-           -->
         </configuration>
         <!-- below trick is to let surefire run both junit and testng.
         see http://stackoverflow.com/questions/1232853/how-to-execute-junit-and-testng-tests-in-same-project-using-maven-surefire-plugi-->
